# tienganh_hoanchinh

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.cloudflare.yml  docker-compose.dev.yml  docker-compose.https.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/admin/: __init__.py  routes.py  service.py
app/api/: deps.py
app/core/: config.py  crypto.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  assessment.py  content.py  enums.py  ops.py  progress.py  user.py
app/schemas/: __init__.py  admin.py  ai.py  auth.py  learning.py  placement.py
app/seeds/: generate_audio.py  loader.py  schema.py  validate_content.py
app/services/: auth_service.py  learning_path_service.py  mail_service.py  notification_service.py  placement_scoring.py  placement_service.py  prerequisite_service.py  roadmap_service.py  roleplay_service.py  settings_service.py  story_service.py  (+1 more)
config/: llm_prices.json
docker/: Caddyfile  app.Dockerfile  backup.sh  speech.Dockerfile
docs/: khung-level.md
english_for_work.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
scripts/: seed_data.py
speech_service/: asr.py  feedback_vi.py  g2p.py  main.py  scoring.py  tts.py
tests/: conftest.py  test_content_levels.py  test_content_read_write_quality.py  test_lesson_read_write_pipeline.py  test_lesson_state_transitions.py  test_placement_forms.py  test_placement_scoring.py  test_roadmap_service.py  test_seed_preserves_progress.py  test_writing_service.py
(+165 files in other folders)
